samples/_failures_safe/1761225649_3eadf3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dab2f500.c: In function ‘print_shortest_path’:
./samples/SAFE/__tmp_dab2f500.c:153:5: error: expected ‘,’ or ‘;’ at end of input
  153 |     for (int i = path
      |     ^~~
./samples/SAFE/__tmp_dab2f500.c:153:5: error: expected declaration or statement at end of input
